Fix CSS syntax and add alignment to header

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ header, footer {
     height:100px;
     width:100%;
     max-width:100vw;
-    padding:0 80px
+    padding:0 80px;
+    align-content:center;
     color:white
 }
 header ul {
